Created an instruction card component and used it in the landing page

--- a/frontend/src/Pages/Landing/style.css
+++ b/frontend/src/Pages/Landing/style.css
@@ -93,3 +93,9 @@
   color: white;
   line-height: 1.5;
 }
+
+.landing-row-instructions {
+  display: flex;
+  justify-content: space-evenly;
+  direction: row;
+}
