--- a/frontend/src/Pages/Landing/style.css
+++ b/frontend/src/Pages/Landing/style.css
@@ -99,3 +99,32 @@
   justify-content: space-evenly;
   direction: row;
 }
+
+.landing-story-section {
+  text-align: center;
+  padding: 60px 40px;
+}
+
+.landing-story-section h1 {
+  font-size: 40px;
+  margin-bottom: 30px;
+}
+
+.landing-story-section h2 {
+  font-size: 20px;
+  font-style: italic;
+  margin-bottom: 40px;
+  font-weight: normal;
+  line-height: 1.5;
+}
+
+.landing-row-stories {
+  display: flex;
+  justify-content: space-evenly;
+  direction: row;
+}
+
+.landing-logo-img-sc {
+  width: 250px;
+  height: auto;
+}
