--- a/frontend/src/Pages/Network/style.css
+++ b/frontend/src/Pages/Network/style.css
@@ -8,7 +8,8 @@
   margin: 40px;
 }
 
-.network-paths {
+.network-paths,
+.network-mentors {
   display: flex;
   justify-content: space-evenly;
   direction: row;
