--- a/frontend/src/Components/Recommendation/style.css
+++ b/frontend/src/Components/Recommendation/style.css
@@ -3,14 +3,19 @@
   padding: 40px;
   border-radius: 8px;
   border-style: solid;
+  width: 285px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .recommendation-card h4 {
-  padding: 20px;
+  padding: 10px;
 }
 
 .recommendation-card p {
   font-style: italic;
   padding: 20px;
   width: 200px;
+  margin-bottom: 20px;
 }
