Adjusted a bit in the landing page

--- a/frontend/src/Components/SuccessCard/style.css
+++ b/frontend/src/Components/SuccessCard/style.css
@@ -14,9 +14,11 @@
 
 .landing-story h3 {
   text-align: left;
+  margin-left: 30px;
 }
 
 .landing-story h4 {
   text-align: left;
   font-weight: normal;
+  margin-left: 30px;
 }
