--- a/frontend/src/Pages/Landing/style.css
+++ b/frontend/src/Pages/Landing/style.css
@@ -49,20 +49,17 @@
   font-size: 20px;
   font-style: italic;
   margin-bottom: 40px;
-  font-weight: normal;
   color: #555;
-  line-height: 1.5;
+  width: 800px;
 }
 
 .landing-row-btns {
   display: flex;
   gap: 20px;
-  margin-bottom: 30px;
 }
 
-.landing-her-img {
-  flex: 1;
-  background: url("../../Assets/AlignPathWhite.png") no-repeat center/contain;
+.landing-hero-img {
+  border-radius: 8px;
   min-height: 300px;
 }
 
