--- a/frontend/src/Components/Content/Auth/style.css
+++ b/frontend/src/Components/Content/Auth/style.css
@@ -12,18 +12,14 @@
 }
 
 .left-button {
-  background-color: #424242;
-  color: white;
+  background-color: #d9d9d9;
+  color: black;
   border: none;
   border-radius: 10px;
   width: 30px;
   height: 30px;
-  font-size: 18px;
+  font-size: 30px;
   cursor: pointer;
-}
-
-.left-button:hover {
-  background-color: black;
 }
 
 .auth-container {
