Added ids the the landing's sections, used them to scroll

--- a/frontend/src/Pages/Landing/style.css
+++ b/frontend/src/Pages/Landing/style.css
@@ -125,3 +125,17 @@
   width: 250px;
   height: auto;
 }
+.landing-nav-links {
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+}
+
+.landing-nav-links a {
+  color: white;
+  text-decoration: none;
+}
+
+html {
+  scroll-behavior: smooth;
+}
