--- a/frontend/src/Components/Recommendation/style.css
+++ b/frontend/src/Components/Recommendation/style.css
@@ -3,6 +3,7 @@
   padding: 40px;
   border-radius: 8px;
   border-style: solid;
+  border-color: #d9d9d9;
   width: 285px;
   display: flex;
   flex-direction: column;
@@ -13,9 +14,11 @@
   padding: 10px;
 }
 
-.recommendation-card p {
-  font-style: italic;
+.recommendation-card h6 {
   padding: 20px;
   width: 200px;
   margin-bottom: 20px;
+  font-size: 18px;
+  font-weight: normal;
+  text-align: left;
 }
