--- a/frontend/src/Pages/Home/style.css
+++ b/frontend/src/Pages/Home/style.css
@@ -10,7 +10,7 @@
 
 .homePage-careers {
   text-align: center;
-  background-color: #d9d9d9;
+  background-color: #f5f5f5;
   display: flex;
   justify-content: space-evenly;
   direction: row;
@@ -23,7 +23,7 @@
 
 .homePage-stats {
   text-align: center;
-  background-color: #d9d9d9;
+  background-color: #f5f5f5;
   display: flex;
   justify-content: space-evenly;
   direction: row;
