Adjusted path page's styling

--- a/frontend/src/Components/SavedPath/style.css
+++ b/frontend/src/Components/SavedPath/style.css
@@ -2,6 +2,7 @@
   text-align: center;
   border-radius: 8px;
   border-style: solid;
+  border-color: #d9d9d9;
   width: 400px;
   padding: 20px;
   margin: 40px;
@@ -16,7 +17,8 @@
 .path-card-header h4 {
   background-color: #424242;
   color: white;
-  padding: 5px;
+  padding-left: 20px;
+  padding-right: 20px;
   border-radius: 90px;
   font-weight: lighter;
   margin-bottom: 20px;
@@ -24,6 +26,7 @@
 
 .path-card-subtitle {
   text-align: left;
+  font-weight: normal;
 }
 
 .path-card-progress {
@@ -41,7 +44,8 @@
 }
 
 .path-card-footer h5 {
-  margin-top: 10px;
+  margin-top: 12px;
+  font-weight: normal;
 }
 
 .path-card-progress-bar {
