--- a/frontend/src/Components/Input/style.css
+++ b/frontend/src/Components/Input/style.css
@@ -1,7 +1,7 @@
 .input-style {
   padding: 12px;
   font-size: 16px;
-  border: 1px solid #424242;
+  border: 1px solid #d9d9d9;
   border-radius: 5px;
   width: 100%;
   background-color: white;
