--- a/frontend/src/Pages/Profile/style.css
+++ b/frontend/src/Pages/Profile/style.css
@@ -9,7 +9,7 @@
 }
 
 .profile-user-info {
-  background-color: #d9d9d9;
+  background-color: #f5f5f5;
   margin-top: 20px;
   width: 70%;
   border-radius: 8px;
@@ -24,12 +24,20 @@
   gap: 20px;
 }
 
+.profile-user-titles h3 {
+  margin-bottom: 10px;
+}
+
+.profile-user-titles strong {
+  font-weight: normal;
+}
+
 .profile-user-img {
   margin-top: 5px;
   border-style: solid;
   border-radius: 50%;
-  width: 40px;
-  height: 40px;
+  width: 60px;
+  height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -37,6 +45,7 @@
 
 .profile-user-field-section {
   border-top-style: solid;
+  border-color: #d9d9d9;
   display: flex;
   justify-content: space-between;
   align-items: stretch;
@@ -78,7 +87,7 @@
 .profile-side-box {
   margin-top: 20px;
   width: 30%;
-  background: #d9d9d9;
+  background: #f5f5f5;
   border-radius: 8px;
   padding: 20px;
   display: flex;
@@ -128,4 +137,6 @@
 
 .profile-user-save-changes h4 {
   width: 200px;
+  font-weight: normal;
+  font-size: 18px;
 }
