--- a/frontend/src/Components/ProblemCard/style.css
+++ b/frontend/src/Components/ProblemCard/style.css
@@ -2,6 +2,7 @@
   background-color: white;
   border-radius: 8px;
   border-style: solid;
+  border-color: #d9d9d9;
   width: 700px;
   padding: 20px;
 }
