--- a/frontend/src/Components/Content/Auth/style.css
+++ b/frontend/src/Components/Content/Auth/style.css
@@ -105,8 +105,7 @@
 .auth-radio-row {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
+  align-items: left;
   gap: 20px;
   margin-top: 10px;
 }
