Created an axios service, made login/register functional with their custom hooks

--- a/frontend/src/Components/Content/Auth/style.css
+++ b/frontend/src/Components/Content/Auth/style.css
@@ -98,8 +98,9 @@
 
 .auth-error {
   color: red;
-  margin-top: 10px;
   font-size: 14px;
+  width: max-content;
+  align-self: flex-start;
 }
 
 .auth-radio-row {
