Adjusted landing page styling and footer

--- a/frontend/src/Components/InstructionCard/style.css
+++ b/frontend/src/Components/InstructionCard/style.css
@@ -2,14 +2,33 @@
   background-color: white;
   width: 300px;
   border-radius: 8px;
-}
-
-.landing-instruction h3 {
-  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .landing-instruction h6 {
   font-size: 18px;
   font-weight: normal;
   padding: 30px;
+}
+
+.landing-instruction-icon-container {
+  padding-top: 5px;
+  margin: 20px;
+  width: 40px;
+  height: 40px;
+  border-style: solid;
+  border-color: #f46530;
+  border-radius: 8px;
+  background-color: #ffd07b;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.landing-instruction-icon {
+  color: #f46530;
+  size: 24px;
 }
