--- a/frontend/src/Components/SuccessCard/style.css
+++ b/frontend/src/Components/SuccessCard/style.css
@@ -15,10 +15,11 @@
 }
 
 .landing-story h3 {
-  margin-left: 30px;
+  margin-left: 20px;
+  font-weight: 500;
 }
 
 .landing-story h4 {
   font-weight: normal;
-  margin-left: 30px;
+  margin-left: 20px;
 }
