--- a/frontend/src/Components/Content/Auth/style.css
+++ b/frontend/src/Components/Content/Auth/style.css
@@ -12,7 +12,7 @@
 }
 
 .left-button {
-  background-color: #d9d9d9;
+  background-color: #f5f5f5;
   color: black;
   border: none;
   border-radius: 10px;
@@ -23,7 +23,7 @@
 }
 
 .auth-container {
-  background-color: #d9d9d9;
+  background-color: #f5f5f5;
   padding: 40px;
   border-radius: 10px;
   width: 100%;
@@ -83,24 +83,23 @@
 .auth-link {
   font-size: 14px;
   margin-top: 20px;
+  font-weight: normal;
 }
 
 .auth-link-span {
-  color: blue;
+  color: #f46530;
   font-weight: bold;
   text-decoration: underline;
 }
 
 .auth-link-span:hover {
-  color: #033670;
+  color: #ffd07b;
   cursor: pointer;
 }
 
 .auth-error {
   color: red;
   font-size: 14px;
-  width: max-content;
-  align-self: flex-start;
 }
 
 .auth-radio-row {
