--- a/frontend/src/Components/Statistic/style.css
+++ b/frontend/src/Components/Statistic/style.css
@@ -2,9 +2,14 @@
   background-color: white;
   padding: 40px;
   border-radius: 8px;
+  border-width: 1px;
   border-style: solid;
   border-color: #d9d9d9;
   width: 285px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .landing-stat h2 {
@@ -12,7 +17,7 @@
 }
 
 .landing-stat h3 {
-  font-style: italic;
   padding: 10px;
-  width: 200px;
+  width: 250px;
+  font-weight: normal;
 }
