--- a/frontend/src/Components/MentorCard/style.css
+++ b/frontend/src/Components/MentorCard/style.css
@@ -1,5 +1,6 @@
 .mentor-card {
   border-radius: 8px;
+  border-width: 1px;
   border-style: solid;
   border-color: #d9d9d9;
   width: 400px;
@@ -36,9 +37,10 @@
 
 .mentor-skills {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: left;
+  margin-left: 20px;
   direction: row;
-  gap: 10px;
+  gap: 20px;
   margin-bottom: 40px;
 }
 
@@ -56,7 +58,9 @@
   display: flex;
   justify-content: left;
   direction: row;
+  align-items: center;
   padding-right: 20px;
   margin-left: 20px;
   gap: 10px;
+  font-weight: bold;
 }
