--- a/frontend/src/Components/ProblemCard/style.css
+++ b/frontend/src/Components/ProblemCard/style.css
@@ -1,5 +1,6 @@
 .problem-card {
   background-color: white;
+  border-width: 1px;
   border-radius: 8px;
   border-style: solid;
   border-color: #d9d9d9;
@@ -11,6 +12,10 @@
 h4 {
   text-align: left;
   margin-bottom: 20px;
+}
+
+.problem-card h4 {
+  font-weight: normal;
 }
 
 .problem-card-tags {
