--- a/frontend/src/Components/QuestCard/style.css
+++ b/frontend/src/Components/QuestCard/style.css
@@ -1,5 +1,6 @@
 .quest-card {
   background-color: white;
+  border-width: 1px;
   border-radius: 8px;
   border-style: solid;
   border-color: #d9d9d9;
