--- a/frontend/src/Components/SubNavBar/style.css
+++ b/frontend/src/Components/SubNavBar/style.css
@@ -1,17 +1,24 @@
+.sub-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .subNavbar {
   background-color: #424242;
   border-radius: 90px;
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  padding: 10px;
+  align-items: flex-start;
+  gap: 10px;
+  padding: 5px;
+  width: min-content;
 }
 
 .subNavItem {
-  margin: 5px;
   background-color: #d9d9d9;
   border-radius: 90px;
-  padding: 10px 40px;
+  padding: 10px 20px;
   border: none;
   font-size: 16px;
   cursor: pointer;
