--- a/frontend/src/Components/SubNavBar/style.css
+++ b/frontend/src/Components/SubNavBar/style.css
@@ -1,7 +1,6 @@
 .sub-body {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
 }
 
@@ -9,7 +8,7 @@
   background-color: #424242;
   border-radius: 90px;
   display: flex;
-  align-items: flex-start;
+  align-self: center;
   gap: 10px;
   padding: 5px;
   width: min-content;
