--- a/frontend/src/Pages/Home/style.css
+++ b/frontend/src/Pages/Home/style.css
@@ -16,7 +16,7 @@
   direction: row;
   padding: 40px;
   border-radius: 8px;
-  width: 60%;
+  width: 110%;
   margin-top: 20px;
   margin-left: 40px;
 }
@@ -29,7 +29,24 @@
   direction: row;
   padding: 40px;
   border-radius: 8px;
-  width: 60%;
+  width: 110%;
   margin-top: 20px;
   margin-left: 40px;
+}
+
+.homePage-body {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 180px;
+}
+
+.homePage-chatbot {
+  background-color: #f5f5f5;
+  border-radius: 8px;
+  border-style: solid;
+  border-color: #d9d9d9;
+  margin-top: 80px;
+  margin-left: 40px;
+  width: 450px;
 }
