Adjusted landing page styling

--- a/frontend/src/Components/InstructionCard/style.css
+++ b/frontend/src/Components/InstructionCard/style.css
@@ -22,7 +22,7 @@
   border-style: solid;
   border-color: #f46530;
   border-radius: 8px;
-  background-color: #ffd07b;
+  background-color: #ffe8be;
   display: flex;
   justify-content: center;
   align-items: center;
