--- a/frontend/src/Components/MentorCard/style.css
+++ b/frontend/src/Components/MentorCard/style.css
@@ -48,9 +48,12 @@
   background-color: #feeded;
   border-style: solid;
   border-radius: 90px;
+  border-width: 1px;
   border-color: #f46530;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 3px;
+  text-align: center;
 }
 
 .mentor-btn-txt,
