--- a/frontend/src/Components/QuestCard/style.css
+++ b/frontend/src/Components/QuestCard/style.css
@@ -30,8 +30,9 @@ h4 {
   background-color: #424242;
   color: white;
   border-radius: 90px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 3px;
 }
 
 .quest-card-btn {
