--- a/frontend/src/Components/SubNavBar/style.css
+++ b/frontend/src/Components/SubNavBar/style.css
@@ -15,7 +15,7 @@
 }
 
 .subNavItem {
-  background-color: #d9d9d9;
+  background-color: white;
   border-radius: 90px;
   padding: 10px 20px;
   border: none;
