--- a/frontend/src/Components/Recommendation/style.css
+++ b/frontend/src/Components/Recommendation/style.css
@@ -6,9 +6,12 @@
   border-style: solid;
   border-color: #d9d9d9;
   width: 285px;
+  min-height: 350px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
+  gap: 10px;
 }
 
 .recommendation-card h4 {
@@ -18,7 +21,6 @@
 .recommendation-card h6 {
   padding: 10px;
   width: 200px;
-  margin-bottom: 20px;
   font-size: 18px;
   font-weight: normal;
   text-align: center;
