--- a/frontend/src/Components/Recommendation/style.css
+++ b/frontend/src/Components/Recommendation/style.css
@@ -15,11 +15,14 @@
 }
 
 .recommendation-card h4 {
-  padding-top: 20px;
+  display: flex;
+  justify-content: center;
+  width: 280px;
 }
 
 .recommendation-card h6 {
   padding: 10px;
+  padding-top: 0px;
   width: 200px;
   font-size: 18px;
   font-weight: normal;
